# anthon-rs

./: Cargo.toml  README.md
src/: config.rs  core.rs  lib.rs  main.rs  mediapipe.rs  ui.rs
src/common/: bit_string.rs  circle.rs  command.rs  filter.rs  graph.rs  mod.rs  point_2f.rs  pointer.rs  probability_vector.rs  rectangle.rs  sign.rs  sign_dictionary.rs  vec_2f.rs
src/common/state/: conditional_edge.rs  mod.rs  state_machine.rs
src/hand-stablizer/: main.rs
ui/: common.slint  home_page.slint  main_window.slint  settings_page.slint  sign_dictionary_page.slint  state_graph_page.slint
ui/widgets/: combo_box.slint  feature_box.slint  graph.slint  list_view.slint  toggleable_line_edit.slint
