[package]
name = "anthon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.119"
slint = "0.2.4"
image = "0.23.14"
derivative = "2.2.0"
nokhwa = { version = "0.9.4", features = ["input-gst", "output-threaded"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
strum = "0.24.0"
strum_macros = "0.24"
# petgraph = { version = "0.6.0", features = ["serde-1"] }
ordered-float = { version = "2.10", default-features = false }
tfc = "0.6.0"
num = "0.3"
imageproc = "0.20.0"

plotters = "^0.3.1"

[build-dependencies]
slint-build = "0.2.0"

[[bin]]
name = "hand-stablizer"
path = "src/hand-stablizer/main.rs"
